MilestoneRFAFullSandBox/src/objects/Financial_Constant__c.object
<CustomObject>
    <fields>
        <fullName>Consumption_Tax__c</fullName>
        <label>Consumption Tax (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WACC__c</fullName>
        <label>WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Constant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tax_Rate__c</columns>
        <columns>WACC__c</columns>
        <columns>Consumption_Tax__c</columns>
        <columns>isActive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>TAX-{YYYY}{MM}-{0}</displayFormat>
        <label>Financial Constant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I10000000tF0NEAU_00N100000048U0XEAU</fullName>
        <active>true</active>
        <field>RFA__c.FC_ConsumptionTax__c</field>
        <filterItems>
            <field>Financial_Constant__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consumption Tax</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>RFA_FC_ConsumptionTax</name>
    </namedFilters>
    <pluralLabel>Financial Constants</pluralLabel>
    <recordTypes>
        <fullName>Consumption_Tax</fullName>
        <active>true</active>
        <description>消費税</description>
        <label>Consumption Tax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Rate</fullName>
        <active>true</active>
        <label>Tax Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>WACC</fullName>
        <active>true</active>
        <label>WACC</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>